--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
-@import "tailwindcss";
+body{
+    margin: auto;
+    padding: 10px;
+}
+.btn{
+    padding: 8px;
+    background: #000;
+    color: #fff;
+    margin: 0 2px;
+    border-radius: 8px;
+}
